# physeq

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
examples/: block_sliding_to_stop.py  vertical_projectile_motion.py
physeq/: __init__.py  configuration.py  constant.py  constants.py  core.py  coulomb_force.py  electric_current.py  equation.py  force.py  forces.py  kinematics.py  mass.py  momentum.py  number.py  ordering.py  printing.py  space.py  symbol.py  time.py  version.py  work_energy.py  wrapped.py  wrapper.py
physeq/cas/: equation.py  exprorder.py  printing.py  problem.py  symbol.py  wrapped.py
physeq/symbols/: constants.py  force.py  kinematics.py  mass.py  space.py  time.py  work_energy.py
