[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'physeq'
description = 'Library of symbolic physics equations for generating problems with solutions'
readme = 'README.md'
requires-python = '>= 3.10'
authors = [
    {name = 'Geoffrey M. Poore', email = 'gpoore@gmail.com'}
]
license = {text = 'BSD-3-Clause'}
dynamic = ['version']
keywords = ['physics', 'education', 'SymPy']
dependencies = [
    'astropy',
    'sympy',
]
# https://pypi.python.org/pypi?:action=list_classifiers
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Education',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Software Development :: Libraries',
]


[project.urls]
homepage = 'https://github.com/gpoore/physeq'
repository = 'https://github.com/gpoore/physeq'
changelog = 'https://github.com/gpoore/physeq/blob/main/CHANGELOG.md'


[tool.setuptools]
license-files = ['LICENSE*', 'CHANGELOG*']

[tool.setuptools.dynamic]
version = {attr = 'physeq.__version__'}


[tool.ruff]
line-length = 120
