[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'physeq'
description = 'Library for generating physics problems with realistic values and step-by-step solutions'
readme = 'README.md'
requires-python = '>= 3.10'
authors = [
    {name = 'Geoffrey M. Poore', email = 'gpoore@gmail.com'}
]
license-files = ['LICENSE*']
dynamic = ['version']
keywords = ['physics', 'education', 'SymPy']
dependencies = [
    'astropy',
    'sympy',
]
# https://pypi.python.org/pypi?:action=list_classifiers
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Topic :: Education',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Software Development :: Libraries',
]


[project.urls]
homepage = 'https://github.com/gpoore/physeq'
repository = 'https://github.com/gpoore/physeq'
changelog = 'https://github.com/gpoore/physeq/blob/main/CHANGELOG.md'


[tool.setuptools.dynamic]
version = {attr = 'physeq.__version__'}


[tool.ruff]
line-length = 120
